<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Purchase list</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_products">Products</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="save_product_edition">Save</string><string name="cancel">Cancel</string>
    <string name="product_delete_question">Do you want delete product?</string>
    <string name="delete">Delete</string>
    <string name="delete_product">Delete product</string>
    <string name="action_add_to_purchase">Add to Purchase</string>
    <string name="add_to_purchases_button">Add to Purchases</string>
    <string name="delete_from_products_button">Delete</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Product</string>
    <string name="product_unit">Unit</string>
    <string-array name="units">
        <item>kilogram</item>
        <item>gram</item>
        <item>meter</item>
        <item>decimeter</item>
        <item>litr</item>
    </string-array>
    <string name="search_label">Search</string>
    <string name="add_error">This product is exist</string>
    <string name="browse">Browse</string>

</resources>
