<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.JB.develop.purchaselist.MainActivity">

    <item android:id="@+id/search_item_id"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/action_delete"
        android:orderInCategory="120"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="130"
        android:title="@string/action_add" />
    <item 
        android:id="@+id/action_add_to_purchase"
        android:orderInCategory="140"
        android:title="@string/action_add_to_purchase" />        
</menu>
