<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.JB.develop.purchaselist.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/add2"
        android:title="@string/action_add"/>
 	<item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/delete"
        android:title="@string/action_delete"/>
</menu>
