<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/new_purchase_name_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/product_name"
            android:labelFor="@+id/new_purchase_name"
            android:layout_weight="1"/>
        <EditText
            android:id="@id/new_purchase_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/new_purchase_name_line"
        style= "?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/add_new_purchase"
            android:layout_alignParentLeft="true"
            android:text="@string/add_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/cancel_add_new_purchase"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/add_new_product"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>